Edited some spacing issues and bugs.
Incorporated a logo into the navbar, adjusted the logo to fit what I
wanted it to do, edited information, changed some styling

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,4 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-  
-}
+
 
 ul.nav{
 	font-family: 'Raleway', sans-serif;
@@ -12,6 +8,7 @@ ul.nav{
 .navbar-fixed-top{
 	opacity:.9;
 	background-color:rgb(0,0,0);
+	height:55px;
 }
 
 .btn-lg {
@@ -34,6 +31,15 @@ ul.nav{
 #logo{
 	padding-bottom: 40px;
 }
+#logo-indent{
+	position:absolute;	
+	height:50px;
+	width:50px;
+	left:330px;
+	top:2px;
+
+
+}
 .jumbotron mark{
 	opacity:.8;
 	background-color:rgb(255,95,95);
@@ -44,6 +50,7 @@ ul.nav{
 	margin-top:0px;
 	margin-bottom:50px;
 	color:rgb(255,255,255);
+	padding-top:50px;
 }
 
 .jumbotron p{
@@ -139,7 +146,7 @@ footer h3{
 }
 
 #back-to-top{
-	    position: fixed;
+	position: fixed;
     bottom: 20px;
     right: 20px;
 }
